--- a/client/public/style.css
+++ b/client/public/style.css
@@ -11,7 +11,7 @@ body{
 main{
     flex: 1;
     grid-row: 2;
-    grid-column: 2; /* Content (e.g., verses) stays to the right */
+    grid-column: 2;
     padding: 20px;
     overflow-y: auto;
 }
@@ -105,7 +105,7 @@ footer a{
     }
     50% {
         opacity: 0;
-        filter: blur(5px); /* Applique un flou pendant la disparition */
+        filter: blur(5px);
     }
     100% {
         opacity: 1;
@@ -116,5 +116,5 @@ footer a{
 .verse {
     display: inline-block;
     transition: opacity 1s ease, filter 1s ease;
-    animation: blurFadeOutIn 3s infinite; /* Recommence toutes les 3s */
+    animation: blurFadeOutIn 3s infinite; 
 }
